Fix chrome bug and add direction link spacing rider

--- a/src/Hedwig/ClientApp/src/components/DirectionalLink/_index.scss
+++ b/src/Hedwig/ClientApp/src/components/DirectionalLink/_index.scss
@@ -3,6 +3,8 @@
 	display: block;
 	@include u-text('primary');
 	@include u-text('bold');
+	margin-top: units(2);
+	margin-bottom: units(-2);
 }
 
 .oec-directional-link__arrow {
