--- a/src/Hedwig/ClientApp/src/containers/App/App.module.scss
+++ b/src/Hedwig/ClientApp/src/containers/App/App.module.scss
@@ -1,5 +1,5 @@
 // Arbitrary amount of space to temporarily avoid issue of things going off the page
 // TODO: revisit this when we add a footer
 .container {
-	margin-bottom: 10rem;
+	padding-bottom: 10rem;
 }
